Bug 586768 - Incubator qt embedding: QMozView crashes if QMozApp is inited before. r=mark.finkle